# matching-engine-tutorial-for-image-search

./: .gitignore  .tool-versions  README.md  TUTORIAL.ja.md  TUTORIAL.md  create_index_body.json.tpl  deploy_index_body.json.tpl
searcher/: main.py  pyproject.toml
terraform/: main.tf  startup.sh
updater/: Dockerfile  main.py  pyproject.toml
vectorizer/: Dockerfile  main.py  pyproject.toml
